--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "local-streaming-app",
+  "name": "video-streaming-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
